[gd_scene load_steps=4 format=3 uid="uid://bb8o24vqvjquf"]

[ext_resource type="Script" path="res://sprites/scripts/map.gd" id="1_vyh3t"]
[ext_resource type="Texture2D" uid="uid://dyjutptvj3503" path="res://Assets/Background/Background_2.png" id="1_wf24f"]
[ext_resource type="Texture2D" uid="uid://yh74v6w4qshi" path="res://Assets/Background/Background_1.png" id="2_3yfyw"]

[node name="map" type="Node2D"]
script = ExtResource("1_vyh3t")

[node name="sky" type="Sprite2D" parent="."]
position = Vector2(576.294, 317)
scale = Vector2(2.40441, 2.40441)
texture = ExtResource("1_wf24f")

[node name="cloud" type="Sprite2D" parent="."]
position = Vector2(571.294, 320)
scale = Vector2(2.40441, 2.40441)
texture = ExtResource("2_3yfyw")

[node name="level_3" type="Button" parent="."]
offset_left = 112.0
offset_top = 208.0
offset_right = 374.0
offset_bottom = 312.0
theme_override_font_sizes/font_size = 50
text = "level  3
"

[node name="level_4" type="Button" parent="."]
offset_left = 440.0
offset_top = 212.0
offset_right = 702.0
offset_bottom = 316.0
theme_override_font_sizes/font_size = 50
text = "level  4
"

[node name="level_5" type="Button" parent="."]
offset_left = 771.0
offset_top = 214.0
offset_right = 1033.0
offset_bottom = 318.0
theme_override_font_sizes/font_size = 50
text = "level  5
"

[node name="level_2" type="Button" parent="."]
offset_left = 768.0
offset_top = 64.0
offset_right = 1030.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 50
text = "level 2"

[node name="level_1" type="Button" parent="."]
offset_left = 440.0
offset_top = 64.0
offset_right = 702.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 50
text = "level 1"

[node name="place holder3" type="Button" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0.00392157, 0.00392157, 0.00392157, 1)
offset_left = 112.0
offset_top = 208.0
offset_right = 374.0
offset_bottom = 312.0
theme_override_font_sizes/font_size = 50
text = "
"

[node name="place holder5" type="Button" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0.00392157, 0.00392157, 0.00392157, 1)
offset_left = 771.0
offset_top = 215.0
offset_right = 1033.0
offset_bottom = 319.0
theme_override_font_sizes/font_size = 50
text = "
"

[node name="place holder4" type="Button" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0.00392157, 0.00392157, 0.00392157, 1)
offset_left = 440.0
offset_top = 211.0
offset_right = 702.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 50
text = "
"

[node name="place holder2" type="Button" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0.00392157, 0.00392157, 0.00392157, 1)
offset_left = 768.0
offset_top = 64.0
offset_right = 1030.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 50
text = "
"

[node name="place holder1" type="Button" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0.00392157, 0.00392157, 0.00392157, 1)
offset_left = 440.0
offset_top = 64.0
offset_right = 702.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 50
text = "
"

[node name="tutorial" type="Button" parent="."]
offset_left = 112.0
offset_top = 64.0
offset_right = 374.0
offset_bottom = 168.0
scale = Vector2(0.995884, 0.995884)
theme_override_font_sizes/font_size = 50
text = "tutorial
"

[node name="back" type="Button" parent="."]
offset_left = 933.0
offset_top = 549.0
offset_right = 1127.0
offset_bottom = 626.0
scale = Vector2(0.995884, 0.995884)
theme_override_font_sizes/font_size = 50
text = "back"

[connection signal="pressed" from="level_3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="level_4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="level_5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
